After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680551 - [0.11] realmedia rtsp does not work
[0.11] realmedia rtsp does not work
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
0.11.x
Other Linux
: Normal major
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-24 19:39 UTC by Tim-Philipp Müller
Modified: 2013-08-02 01:58 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Tim-Philipp Müller 2012-07-24 19:39:07 UTC
None of my realmedia RTSP test streams works in 0.11, and there's a 

GLib-GObject-WARNING **: gobject/gsignal.c:2455: signal `on-npt-stop' is invalid for instance `0xe99240'

warning courtesy of rtspsrc.

  $ gst-launch-1.0 playbin uri=rtsp://66.111.34.191:601/broadcast/alnour.rm
  $ gst-launch-1.0 playbin uri=rtsp://sound.er.ee:554/encoder/helixr2.rm
Comment 1 Wim Taymans 2012-07-25 10:52:55 UTC
commit b9485b2305a18e1681a9ff137da7b63edfce4234
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Wed Jul 25 12:48:21 2012 +0200

    rdt: set caps after activating the pad

commit 445af55d9fd50b3af7626fc13dfc6e5e18ae2a23
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Wed Jul 25 12:48:06 2012 +0200

    rdt: reset map info


commit ef38efc2d7f40838752875e0fe6b35712bb0a586
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Wed Jul 25 12:50:01 2012 +0200

    rtsp: go and stay in the loop function on PLAY
    
    When we have a PLAY request, go into the LOOP function next. When we are
    looping, keep on looping until we are told otherwise.
    This fixed rtsp and TCP connections.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=680551